<?xml version="1.0" encoding="UTF-8" ?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <inceptionYear>2023</inceptionYear>

    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>7</version>
    </parent>

    <groupId>org.meteor</groupId>
    <artifactId>meteor</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <properties>
        <revision>1.0.0-SNAPSHOT</revision>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <maven.compiler.version>21</maven.compiler.version>
      <maven.compiler.source>21</maven.compiler.source>
      <maven.compiler.target>21</maven.compiler.target>
      <java.version>21</java.version>
        <maven.test.skip>false</maven.test.skip>
        <maven.javadoc.skip>true</maven.javadoc.skip>
        <protobuf.version>3.21.8</protobuf.version>
      <netty.version>4.1.111.Final</netty.version>
        <fastuyil.core.version>8.5.8</fastuyil.core.version>
        <caffine.version>3.1.1</caffine.version>
        <gson.version>2.9.0</gson.version>
        <guava.version>33.0.0-jre</guava.version>
        <jsr.version>3.0.2</jsr.version>
        <kotlin.version>1.8.10</kotlin.version>
        <spock.core.version>1.3-groovy-2.5</spock.core.version>
        <groovy.version>3.0.16</groovy.version>
        <byte.buddy.version>1.14.2</byte.buddy.version>
        <objenesis.version>3.2</objenesis.version>
        <gmavenplus.plugin.version>2.1.0</gmavenplus.plugin.version>
        <maven.surefire-plugin.version>3.0.0-M5</maven.surefire-plugin.version>
        <jctools.core.version>4.0.1</jctools.core.version>
        <junit.version>4.13.2</junit.version>
        <check.style.version>2.17</check.style.version>
        <version.plugin.version>2.16.0</version.plugin.version>
        <logback.version>1.4.14</logback.version>
      <common.lang3.version>3.14.0</common.lang3.version>
      <commons.validator.version>1.8.0</commons.validator.version>
      <zstd.jni.version>1.5.6-2</zstd.jni.version>
      <lz4.java.version>1.8.0</lz4.java.version>
      <commons.text.version>1.11.0</commons.text.version>
      <net.affinity.version>3.23.3</net.affinity.version>
    </properties>

    <dependencyManagement>
        <dependencies>
          <dependency>
            <groupId>net.openhft</groupId>
            <artifactId>affinity</artifactId>
            <version>${net.affinity.version}</version>
          </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>meteor-bom</artifactId>
                <version>${project.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
          <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>${commons.text.version}</version>
          </dependency>
          <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${common.lang3.version}</version>
          </dependency>
          <dependency>
            <groupId>commons-validator</groupId>
            <artifactId>commons-validator</artifactId>
            <version>${commons.validator.version}</version>
          </dependency>
          <dependency>
            <groupId>com.github.luben</groupId>
            <artifactId>zstd-jni</artifactId>
            <version>${zstd.jni.version}</version>
          </dependency>
          <dependency>
            <groupId>org.lz4</groupId>
            <artifactId>lz4-java</artifactId>
            <version>${lz4.java.version}</version>
          </dependency>
            <dependency>
                <groupId>org.jctools</groupId>
                <artifactId>jctools-core</artifactId>
                <version>${jctools.core.version}</version>
            </dependency>

            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>${protobuf.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>it.unimi.dsi</groupId>
                <artifactId>fastutil-core</artifactId>
                <version>${fastuyil.core.version}</version>
            </dependency>
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-all</artifactId>
                <version>${netty.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>${caffine.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.groovy</groupId>
                <artifactId>groovy-all</artifactId>
                <version>${groovy.version}</version>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>com.google.code.findbugs</groupId>
                <artifactId>jsr305</artifactId>
                <version>${jsr.version}</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.groovy</groupId>
                <artifactId>groovy</artifactId>
                <version>${groovy.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.groovy</groupId>
                <artifactId>groovy-json</artifactId>
                <version>${groovy.version}</version>
            </dependency>
            <dependency>
                <groupId>net.bytebuddy</groupId>
                <artifactId>byte-buddy</artifactId>
                <version>${byte.buddy.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.objenesis</groupId>
                <artifactId>objenesis</artifactId>
                <version>${objenesis.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <configuration>
                    <tagBase>${project.artifactId}-${project.version}</tagBase>
                    <tagNameFormat>v@{project.version}</tagNameFormat>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <generateReleasePoms>false</generateReleasePoms>
                    <arguments>-DskipTests</arguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.gmavenplus</groupId>
                <artifactId>gmavenplus-plugin</artifactId>
                <version>${gmavenplus.plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${check.style.version}</version>
                <configuration>
                    <configLocation>checkStyle.xml</configLocation>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>${version.plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire-plugin.version}</version>
                <configuration>
                    <useFile>false</useFile>
                    <includes>
                        <include>**/*Test.java</include>
                        <include>**/*Spec.java</include>
                    </includes>
                </configuration>
            </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
              <source>21</source>
              <target>21</target>
              <compilerArgs>--enable-preview</compilerArgs>
            </configuration>
          </plugin>
        </plugins>
    </build>

    <modules>
        <module>meteor-broker</module>
        <module>meteor-bom</module>
        <module>meteor-client</module>
        <module>meteor-remoting</module>
        <module>meteor-common</module>
        <module>meteor-metrics</module>
        <module>meteor-cli</module>
        <module>meteor-microbench</module>
        <module>meteor-distribution</module>
        <module>meteor-proxy</module>
        <module>meteor-example</module>
    </modules>
</project>